1- modification de l'emplacement des erreurs(en dessous des inputs) + cacher le mot de passe lors de la saisie du login

--- a/EhodVenteEnLigne/appsettings.json
+++ b/EhodVenteEnLigne/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "EhodBDD": "Server=EHODFURY\\SERVEURSQL2022;Database=EhodBoutiqueEnLigne;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "EhodVLUtilisateurs": "Server=EHODFURY\\SERVEURSQL2022;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EhodBDD": "Server=localhost\\SQLEXPRESS;Database=EhodBoutiqueEnLigne;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EhodVLUtilisateurs": "Server=localhost\\SQLEXPRESS;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
