--- a/EhodVenteEnLigne/EhodVenteEnLigne.csproj
+++ b/EhodVenteEnLigne/EhodVenteEnLigne.csproj
@@ -59,4 +59,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Models\ViewModels\LanguageViewModel.wo.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
